# crates.io-management

./: Cargo.toml  LICENSE  Makefile  README.md  sources.toml
src/: cargo_config.rs  commands.rs  lib.rs  managment.rs
src/commands/: add.rs  current.rs  delete.rs  list.rs  set.rs
